--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,24 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+           /* background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            /*shorthand - backgroun
+            color > image > position > repeat > [size] > attachment*/
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 200px;
             padding: 10px;
             margin: auto;
-            border: 1px solid darkblue;
-            border-radius: 20px;
+            border: 3px solid darkblue;
+            border-radius: 10px;
+            text-align: center;
+            color:  blue;
+            font-weight: bolder;
 
         }
     </style>
@@ -29,6 +38,21 @@
 <body>
     <main>
         <h1>Teste de  Imagem de Fundo</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora velit ipsam quae, ut possimus eum optio! Molestiae iste quibusdam possimus alias, illo tempora facilis fugiat nisi error beatae ipsam amet. Lorem ipsum dolor sit amet consectetur, adipisicing elit. At eligendi ut quo, aspernatur nostrum dolorum magnam dignissimos facere qui ullam totam nam consequuntur harum, distinctio, eos inventore! Sapiente, cum ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur error quos eos repellendus, sequi iusto laboriosam, culpa vero est praesentium debitis quis quibusdam unde dicta aut itaque assumenda dolore ad.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora velit ipsam quae, ut possimus eum optio! Molestiae iste quibusdam possimus alias, illo tempora facilis fugiat nisi error beatae ipsam amet. Lorem ipsum dolor sit amet consectetur, adipisicing elit. At eligendi ut quo, aspernatur nostrum dolorum magnam dignissimos facere qui ullam totam nam consequuntur harum, distinctio, eos inventore! Sapiente, cum ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur error quos eos repellendus, sequi iusto laboriosam, culpa vero est praesentium debitis quis quibusdam unde dicta aut itaque assumenda dolore ad.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora velit ipsam quae, ut possimus eum optio! Molestiae iste quibusdam possimus alias, illo tempora facilis fugiat nisi error beatae ipsam amet. Lorem ipsum dolor sit amet consectetur, adipisicing elit. At eligendi ut quo, aspernatur nostrum dolorum magnam dignissimos facere qui ullam totam nam consequuntur harum, distinctio, eos inventore! Sapiente, cum ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur error quos eos repellendus, sequi iusto laboriosam, culpa vero est praesentium debitis quis quibusdam unde dicta aut itaque assumenda dolore ad.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora velit ipsam quae, ut possimus eum optio! Molestiae iste quibusdam possimus alias, illo tempora facilis fugiat nisi error beatae ipsam amet. Lorem ipsum dolor sit amet consectetur, adipisicing elit. At eligendi ut quo, aspernatur nostrum dolorum magnam dignissimos facere qui ullam totam nam consequuntur harum, distinctio, eos inventore! Sapiente, cum ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur error quos eos repellendus, sequi iusto laboriosam, culpa vero est praesentium debitis quis quibusdam unde dicta aut itaque assumenda dolore ad.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora velit ipsam quae, ut possimus eum optio! Molestiae iste quibusdam possimus alias, illo tempora facilis fugiat nisi error beatae ipsam amet. Lorem ipsum dolor sit amet consectetur, adipisicing elit. At eligendi ut quo, aspernatur nostrum dolorum magnam dignissimos facere qui ullam totam nam consequuntur harum, distinctio, eos inventore! Sapiente, cum ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur error quos eos repellendus, sequi iusto laboriosam, culpa vero est praesentium debitis quis quibusdam unde dicta aut itaque assumenda dolore ad.
+        </p>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora velit ipsam quae, ut possimus eum optio! Molestiae iste quibusdam possimus alias, illo tempora facilis fugiat nisi error beatae ipsam amet. Lorem ipsum dolor sit amet consectetur, adipisicing elit. At eligendi ut quo, aspernatur nostrum dolorum magnam dignissimos facere qui ullam totam nam consequuntur harum, distinctio, eos inventore! Sapiente, cum ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur error quos eos repellendus, sequi iusto laboriosam, culpa vero est praesentium debitis quis quibusdam unde dicta aut itaque assumenda dolore ad.
         </p>
