--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -5,13 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
+    <style>
+        * {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        table {
+            width: 500px;
+            border-collapse: collapse;
+        }
+
+        td, th {
+            border: 2px solid black;
+            padding: 5px;
+        }
+
+        caption {
+            font-size: 1.5em;
+            padding: 5px;
+            font-weight: bold;
+            background-color: gray;
+        }
+
+        thead, tfoot {
+            background-color: rgba(0, 0, 0, 0.952);
+            color: white;
+        }
+
+        tbody > tr:nth-child(2n) {
+            background-color: lightgray;
+        }
+
+        td.num {
+            text-align: right;
+        }
+
+
+    </style>
 </head>
 <body>
     <h1>Uso de tabelas grandes</h1>
     <!--
         ANATOMIA PARA TABELAS GRANDES
         TABLE
-            CAPTION
+            CAPTION = LEGENDA OU TÍTULO DA TABELA
             THEAD
                 TR, TD, TH
             TBODY
@@ -20,4 +56,53 @@
                 TR, TD, TH
     -->
 </body>
+<table>
+    <caption>População das Unidades Federativas</caption>
+    <thead>
+        <tr>
+            <th scope="col">Estado</th>
+            <th scope="col" style="width: 100px">População</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>São Paulo</td>
+            <td class="num">45.919.049</td>
+        </tr>
+        <tr>
+            <td>Minas Gerais</td>
+            <td class="num">21.168.791</td>
+        </tr>
+        <tr>
+            <td>Rio de Janeiro</td>
+            <td class="num">17.264.943</td>
+        </tr>
+        <tr>
+            <td>Bahia</td>
+            <td class="num">14.873.064</td>
+        </tr>
+        <tr>
+            <td>Paraná</td>
+            <td class="num">11.433.957</td>
+        </tr>
+        <tr>
+            <td>Rio Grande do Sul</td>
+            <td class="num">11.377.239</td>
+        </tr>
+        <tr>
+            <td>Pernambuco</td>
+            <td class="num">9.577.071</td>
+        </tr>
+        <tr>
+            <td>Ceará</td>
+            <td class="num">9.132.078</td>
+        </tr>
+        <tfoot>
+            <tr>
+                <th scope="row">Total de Habitantes</th>
+                <td class="num"><strong>75.849.938</strong></td>
+            </tr>
+        </tfoot>
+    </tbody>
+</table>
 </html>
