--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
@@ -29,6 +30,12 @@
         thead, tfoot {
             background-color: rgba(0, 0, 0, 0.952);
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: black;
         }
 
         tbody > tr:nth-child(2n) {
@@ -96,6 +103,82 @@
         <tr>
             <td>Ceará</td>
             <td class="num">9.132.078</td>
+        </tr>
+        <tr>
+            <td>Pará</td>
+            <td class="num">8.602.865</td>
+        </tr>
+        <tr>
+            <td>Santa Catarina</td>
+            <td class="num">7.164.788</td>
+        </tr>
+        <tr>
+            <td>Maranhão</td>
+            <td class="num">7.075.181</td>
+        </tr>
+        <tr>
+            <td>Goiás</td>
+            <td class="num">7.018.354</td>
+        </tr>
+        <tr>
+            <td>Amazonas</td>
+            <td class="num">4.144.597</td>
+        </tr>
+        <tr>
+            <td>Espírito Santo</td>
+            <td class="num">4.018.127</td>
+        </tr>
+        <tr>
+            <td>Paraíba</td>
+            <td class="num">4.018.650</td>
+        </tr>
+        <tr>
+            <td>Rio Grande do Norte</td>
+            <td class="num">3.506.853</td>
+        </tr>
+        <tr>
+            <td>Mato Grosso</td>
+            <td class="num">3.484.466</td>
+        </tr>
+        <tr>
+            <td>Alagoas</td>
+            <td class="num">3.337.357</td>
+        </tr>
+        <tr>
+            <td>Piauí</td>
+            <td class="num">3.273.227</td>
+        </tr>
+        <tr>
+            <td>Distrito Federal</td>
+            <td class="num">3.015.268</td>
+        </tr>
+        <tr>
+            <td>Mato Grosso do Sul</td>
+            <td class="num">2.778.986</td>
+        </tr>
+        <tr>
+            <td>Sergipe</td>
+            <td class="num">2.298.696</td>
+        </tr>
+        <tr>
+            <td>Rondônia</td>
+            <td class="num">1.777.225</td>
+        </tr>
+        <tr>
+            <td>Tocantis</td>
+            <td class="num">1.572.866</td>
+        </tr>
+        <tr>
+            <td>Acre</td>
+            <td class="num">881.935</td>
+        </tr>
+        <tr>
+            <td>Amapá</td>
+            <td class="num">845.731</td>
+        </tr>
+        <tr>
+            <td>Roraima</td>
+            <td class="num">605.761 </td>
         </tr>
         <tfoot>
             <tr>
